<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@android:color/black"
    tools:context="adilsal33m.com.hangman.SplashScreen">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/main_bg"
        android:id="@+id/splash_logo"/>
    <LinearLayout
        android:layout_below="@+id/splash_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ddffffff"
            android:textSize="32sp"
            android:textAllCaps="true"
            android:text="Instructions"
            android:textAlignment="center"
            android:padding="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ddffffff"
            android:textSize="24sp"
            android:text="@string/instr_1"
            android:paddingLeft="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ddffffff"
            android:textSize="24sp"
            android:text="@string/instr_2"
            android:paddingLeft="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ddffffff"
            android:textSize="32sp"
            android:text="@string/instr_3"
            android:paddingLeft="16dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_start"
            android:background="@android:color/transparent"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="40sp"
            android:padding="16dp"
            android:layout_margin="16dp"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#60ffffff"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:textSize="24sp"
        android:text="@string/developer"/>
</RelativeLayout>
